@@ -1,6 +1,11 @@
 master
 ------
 
+        * --with-ssl, --with-gnutls and --with-nss options to setup.py now
+          result in PycURL explicitly linking against the respective SSL
+          library. Previously setup.py relied on curl-config to supply the
+          needed libraries in this case.
+
         * List and tuples are now accepted in all positions of HTTPPOST
           option values.
 
